- Fixed bug #53366 (Reflection doesnt get dynamic property value from getProperty())